--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   font-size: 1rem; 
   line-height: 120%;
   border: 1px solid white;
-  overflow: hidden;
+  overflow: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -25,7 +25,7 @@ body.index-body {
   display:flex;
   flex-direction: column;
   justify-content: center;
-  overflow: scroll;
+  overflow: auto;
 }
 
 h1 {
