Added margin-bottom: 10vh to body.

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   width: 60.9%;
   height: 30%;
   margin-top: 10vh;
+  margin-bottom: 10vh;
   margin-left: auto;
   margin-right: auto;
 }
