--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 
 body {
   background-color: black;
+  background-image: repeating-linear-gradient(to bottom, transparent 0, transparent 1px, rgba(255, 255, 255, 0.05) 2px, rgba(255, 255, 255, 0.05) 3px);
+  background-size: 100% 16px;
   color: white;
   font-family: 'Press Start 2P', cursive;
   font-size: 1rem; 
   line-height: 120%;
   border: 1px solid white;
-  overflow: auto;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -17,17 +19,41 @@ body {
   margin-bottom: 10vh;
   margin-left: auto;
   margin-right: auto;
+  padding: 0vh 2vh;
 
+}
+/* Define styles for light mode */
+.light-mode {
+  background-color: white;
+  color: black;
+}
+
+/* Define styles for dark mode */
+.dark-mode {
+  background-color: black;
+  color: white;
 }
 
 body.index-body {
 }
+/* Add a wrapper div to contain your site content */
+.wrapper {
+  overflow: auto; /* Enable scrolling for the wrapper */
+  max-height: 80vh; /* Set the height of the wrapper to the height of the viewport */
+  scrollbar-width: none; /* Hide the scrollbar for Firefox */
+  -ms-overflow-style: none; /* Hide the scrollbar for Internet Explorer and Edge */
+}
 
+/* Hide the scrollbar for Chrome, Safari, and Opera */
+.wrapper::-webkit-scrollbar {
+  display: none;
+}
 .container {
   display:flex;
   flex-direction: column;
   justify-content: center;
-  overflow: auto
+ 
+  
 }
 
 h1 {
@@ -42,13 +68,29 @@ h1 {
   inline-size: auto;
   
 }
+h2 {
+  justify-content: center;
+  text-align: center;
+  font-size: 1em;
+  overflow: visible;
+  white-space: pre-wrap;
+  line-height: 110%;
+  padding-left: 10vw;
+  padding-right: 10vw;
+  inline-size: auto;
+  
+}
+.blog-date {
+  float: right;
+}
+
 
 .btn {
   display: block;
   padding-left: center;
   padding-right: center;
-  padding-top: 0.75vh; /* Updated padding value */
-  padding-bottom: 0.75vh; /* Updated padding value */
+  padding-top: 0.75vh; 
+  padding-bottom: 0.75vh;
   background-color: white;
   color: black;
   border: 2px solid white;
