--- a/style.css
+++ b/style.css
@@ -1,118 +1,186 @@
-
-body {
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+html {
   background-color: black;
-  background-image: repeating-linear-gradient(to bottom, transparent 0, transparent 1px, rgba(255, 255, 255, 0.05) 2px, rgba(255, 255, 255, 0.05) 3px);
-  background-size: 100% 16px;
-  color: white;
-  font-family: 'Press Start 2P', cursive;
-  font-size: 1rem; 
-  line-height: 120%;
-  border: 1px solid white;
   overflow: hidden;
+}
+body {
+  font-family: 'Press Start 2P', cursive;
+  font-size: 1rem;
+  line-height: 120%;
+  overflow: hidden;
+  width: 50vh;
+  height: 50vh;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;  
+  margin: auto !important;
+  position: absolute;
+  display: flex;
+  z-index: 1;
+  background-color: black;
+}
+
+
+.container {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  width: 60.9%;
-  height: 30%;
-  margin-top: 10vh;
-  margin-bottom: 10vh;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0vh 2vh;
 
-}
-/* Define styles for light mode */
-.light-mode {
-  background-color: white;
-  color: black;
-}
+  overflow: hidden;
+  position: absolute;
+  border: 1px solid black;
 
-/* Define styles for dark mode */
-.dark-mode {
-  background-color: black;
-  color: white;
-}
-
-body.index-body {
 }
 /* Add a wrapper div to contain your site content */
 .wrapper {
-  overflow: auto; /* Enable scrolling for the wrapper */
-  max-height: 80vh; /* Set the height of the wrapper to the height of the viewport */
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow-y: auto;
+  max-height: 60vh; /* Set the height of the wrapper to the height of the viewport */
   scrollbar-width: none; /* Hide the scrollbar for Firefox */
   -ms-overflow-style: none; /* Hide the scrollbar for Internet Explorer and Edge */
-}
+  overflow-y: auto;
 
+}
 /* Hide the scrollbar for Chrome, Safari, and Opera */
 .wrapper::-webkit-scrollbar {
   display: none;
 }
-.container {
-  display:flex;
-  flex-direction: column;
-  justify-content: center;
+
+.container:before {
+  content: "";
+  height: 200%;
+  width: 200%;
+  
+  position: absolute;
+  top: 0;
+  left: -50%;
+  bottom: 0;
+  right: 0%;
+
+  margin: auto;
+
+  background: repeating-conic-gradient(
+    #578deb,
+    #ff79d9,
+    #578deb
+  );
+  
+  animation: rotate 5s linear infinite;
+  z-index: -1;
+  border-radius: 50%;
+  }
+
+
+
+  .container:after{
+    content: "";
+    position: absolute;
+    height: 97%;
+    width: 97%;
+    left: 1.5%;
+    top: 1.5%;
+    border-radius: 0em;
+    font-family: 'Press Start 2P', cursive;
+    background-color: black;
+    display: grid;
+    place-items: center;
+    z-index: -1;
+
+    
+
+
+  }
+  @keyframes rotate{
+    100%{
+      transform: rotate(-360deg);
+    }
+  }
+
+
+  h1 {
+    font-family: 'Press Start 2P', cursive !important;
+    align-items: center;
+    text-align: center;
+    line-height: 110%;
+    color: white !important;
+    left: 0%;
+    right: 0%;
+    bottom: 0;
+    position: absolute;
+    top: 10%;
+
+
+  }
+  h2 {
+    font-family: 'Press Start 2P', cursive;
+    justify-content: center;
+    text-align: center;
+    overflow: visible;
+  }
+  p {
+    font-family: 'Press Start 2P', cursive;
+    color: white !important;
+    text-align: center;   
+  }
+  .fs-1, .fs-6 {
+    color: white;
+  }
+  
+  .blog-date { /* Style the date of the blog post to the right side of the page */
+    float: right;
+    font-size: 0.75em;
+  }
+  .blog-title { /* Style the title of the blog post to the left side of the page */
+    float: left;
+    font-size: 1.25em;
+  }
+  .blog-content { /* Style the content of the blog post to the center of the page */
+    text-align: center;
+    font-size: 1em;
+  }
+  .btn {
+    height: 2.5vh;
+    padding-bottom: 2.5vh;
+  }
+  
+  .btn-light {
+    margin: 1% 25%;
+    font-size: 1.25em;
+    font-family: 'Press Start 2P', cursive !important;
+    text-decoration: none;
+    text-align: center;
+    cursor: pointer;
+    z-index: 1;
+    width: 50%;
+     /* Add a transition effect (when the user moves the mouse over the button, hover 5px up): */
+    transition: 0.1s;
+     
+    }
+     .btn-light:hover {
+      transform: translateY(-2px);
+      color: black;
+      background-color: white;
+      border: 1px solid black;
+      border-radius: 0.25em;
+      box-shadow: 0px 0px 5px 0px white;
+      position: flex;
+    ;
+   
+
+  }
  
-  
-}
-
-h1 {
-  justify-content: center;
-  text-align: center;
-  font-size: 2.5em;
-  overflow: visible;
-  white-space: pre-wrap;
-  line-height: 110%;
-  padding-left: 10vw;
-  padding-right: 10vw;
-  inline-size: auto;
-  
-}
-h2 {
-  justify-content: center;
-  text-align: center;
-  font-size: 1em;
-  overflow: visible;
-  white-space: pre-wrap;
-  line-height: 110%;
-  padding-left: 10vw;
-  padding-right: 10vw;
-  inline-size: auto;
-  
-}
-.blog-date {
-  float: right;
-}
-
-
-.btn {
-  display: block;
-  padding-left: center;
-  padding-right: center;
-  padding-top: 0.75vh; 
-  padding-bottom: 0.75vh;
-  background-color: white;
-  color: black;
-  border: 2px solid white;
-  text-align: center;
-  text-decoration: none;
-  font-family: 'Press Start 2P', cursive;
-  font-size: 0.975vh;
-  margin-bottom: 1em;
-  margin-left: auto;
-  margin-right: auto;
-  transition: all 0.15s ease-in-out;
-  width: 50%;
-  overflow: visible;
-  text-overflow: ellipsis;
-}
-
-.btn:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-}
-
-.btn:active {
-  transform: translateY(0);
-  box-shadow: none;
-}
