--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
   display: flex;
   z-index: 1;
   background-color: black;
+  overflow-x: none;
 }
 
 
@@ -160,6 +161,23 @@ body {
   
   .btn-light {
     margin: 1% 25%;
+    /* Make the button's text always fit in the button regardless of the screen size */
+    width: 50%;
+    height: 2.5vh;
+    
+    padding-bottom: 2%;
+    padding-top: 2.5%;
+    padding-left: 1%;
+    padding-right: 1%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    border: 1px solid white;
+    border-radius: 0.25em;
+    box-shadow: 0px 0px 5px 0px white;
+
     font-size: 1.25em;
     font-family: 'Press Start 2P', cursive !important;
     text-decoration: none;
