--- a/style.css
+++ b/style.css
@@ -2,8 +2,6 @@
 *:before,
 *:after {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
 }
 html {
   background-color: black;
@@ -14,35 +12,38 @@ body {
   font-size: 1rem;
   line-height: 120%;
   overflow: hidden;
-  width: 50vh;
+  width: 81vw;
   height: 50vh;
+  max-height: 500px;
   left: 0;
   top: 0;
   bottom: 0;
   right: 0;  
-  margin: auto !important;
+  margin: auto;
   position: absolute;
   display: flex;
   z-index: 1;
   background-color: black;
-  overflow-x: none;
+  overflow-x: hidden;
 }
 
-
+.pack {
+  display: flex;
+  justify-content: center;
+}
 .container {
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
-
+  align-items: center;
   overflow: hidden;
-  position: absolute;
   border: 1px solid black;
-
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
 }
+
+
 
 .wrapper {
   position: absolute;
@@ -51,25 +52,26 @@ body {
   left: 0;
   right: 0;
   overflow-y: auto;
-  max-height: 60vh; /* Set the height of the wrapper to the height of the viewport */
+  max-height: 45vh; /* Set the height of the wrapper to the height of the viewport */
   scrollbar-width: none; /* Hide the scrollbar for Firefox */
   -ms-overflow-style: none; /* Hide the scrollbar for Internet Explorer and Edge */
   overflow-y: auto;
-
+  line-height: 110%;;
 }
 /* Hide the scrollbar for Chrome, Safari, and Opera */
 .wrapper::-webkit-scrollbar {
   display: none;
 }
-
+/*q: how do i center the gradient in the middle of the screen no matter the resolution?*/
+/* a: use a container with a fixed height and width and then use a pseudo element to create the gradient*/
 .container:before {
   content: "";
-  height: 200%;
-  width: 200%;
+  height: 500vh;
+  width: 500vw;
   
   position: absolute;
   top: 0;
-  left: -50%;
+  left: -329%;
   bottom: 0;
   right: 0%;
 
@@ -84,6 +86,7 @@ body {
   animation: rotate 5s linear infinite;
   z-index: -1;
   border-radius: 50%;
+  
   }
 
 
@@ -114,64 +117,82 @@ body {
 
 
   h1 {
-    font-family: 'Press Start 2P', cursive !important;
+    font-family: 'Press Start 2P', cursive;
     align-items: center;
     text-align: center;
     line-height: 110%;
-    color: white !important;
+    color: white ;
     left: 0%;
     right: 0%;
     bottom: 0;
     position: absolute;
     top: 10%;
-    margin-top: 0;
     margin-bottom: 0.5rem;
     font-weight: 500;
-    line-height: 1.2
+    line-height: 1.2;
+    font-size: 2rem;
+    margin-top: 2rem;
+    }
 
-
-  }
   h2 {
     font-family: 'Press Start 2P', cursive;
     justify-content: center;
     text-align: center;
     overflow: visible;
+    color: white;
   }
   p {
     font-family: 'Press Start 2P', cursive;
-    color: white !important;
+    color: white;
     text-align: center;   
   }
-  .fs-1, .fs-6 {
-    color: white;
+
+  @media (max-width: 576px) {
+    h1 {
+      font-size: 1.25rem;
+    }
+  }
+  @media (max-width: 767px) {
+    .container {
+      max-width: 100%;
+      width: 100%;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+  @media (max-width: 500px) {
+    .container {
+      width: 100vw;
+      width: 100%;
+      margin-left: auto;
+      margin-right: auto;
+    }
   }
   
   .blog-date { /* Style date of blog post to right side of page */
     float: right;
     font-size: 0.75em;
+    color: white;
   }
   .blog-title { /* Style title of blog post to left side of page */
     float: left;
     font-size: 1.25em;
+    color: white;
   }
   .blog-content { /* Style content of blog post to center of page */
     text-align: center;
     font-size: 1em;
-  }
-  .btn {
-    height: 2.5vh;
-    padding-bottom: 2.5vh;
+    color: white;
+    justify-content: center;
+   
 
   }
-  
-  .btn-light {
-    margin: 1% 20%;
+  .btn {
+    height: 3vh;
+    padding: 0.5em 1em;
+    margin: 0 auto;
     width: 50%;
-    padding-bottom: 1.5%;
-    padding-top: 1.5%;
-    padding-left: 30%;
-    padding-right: 30%;
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
     background-color: rgb(255, 255, 255);
@@ -179,8 +200,8 @@ body {
     border: 1px solid white;
     border-radius: 0.25em;
     box-shadow: 0px 0px 5px 0px white;
-    font-size: 0.9em;
-    font-family: 'Press Start 2P', cursive !important;
+    font-size: 0.8em;
+    font-family: 'Press Start 2P', cursive;
     text-decoration: none;
     text-align: center;
     cursor: pointer;
@@ -189,7 +210,7 @@ body {
     transition: 0.1s;
      
     }
-     .btn-light:hover {
+     .btn:hover {
       transform: translateY(-2px);
       color: black;
       background-color: white;
